--- a/package.json
+++ b/package.json
@@ -1,11 +1,24 @@
 {
-  "name": "react-archetype",
-  "version": "1.0.0",
-  "description": "",
+  "name": "@gust142/react-archetype",
+  "version": "1.0.1",
+  "description": "CLI para Views e Services para o React Archetype",
   "main": "index.js",
+  "bin": {
+    "@gust142/react-archetype": "bin/npm-package",
+    "pulse": "bin/npm-package"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Gustavo Gomes Farias",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "arg": "^4.1.3",
+    "esm": "^3.2.25",
+    "fs": "0.0.1-security",
+    "inquirer": "^7.3.3"
+  }
 }
