--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "arg": "^4.1.3",
     "esm": "^3.2.25",
     "fs": "0.0.1-security",
-    "inquirer": "^7.3.3"
+    "inquirer": "^7.3.3",
+    "readline": "^1.3.0"
   }
 }
