--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@gust142/react-archetype",
-  "version": "1.0.3",
+  "name": "@gust142/pulse-cli",
+  "version": "1.0.0",
   "description": "CLI para Views e Services para o React Archetype",
   "main": "index.js",
   "bin": {
@@ -18,6 +18,7 @@
   "dependencies": {
     "arg": "^4.1.3",
     "esm": "^3.2.25",
+    "figlet": "^1.5.0",
     "fs": "0.0.1-security",
     "inquirer": "^7.3.3",
     "readline": "^1.3.0"
