--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@gust142/pulse-cli",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "CLI para Views e Services para o React Archetype",
   "main": "index.js",
   "bin": {
     "@gust142/react-archetype": "bin/npm-package",
     "pulse": "bin/npm-package"
   },
+  "preferGlobal": true,
   "publishConfig": {
     "access": "public"
   },
@@ -21,6 +22,7 @@
     "figlet": "^1.5.0",
     "fs": "0.0.1-security",
     "inquirer": "^7.3.3",
+    "nodejs-base64": "^1.0.3",
     "readline": "^1.3.0"
   }
 }
