--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "arg": "^4.1.3",
+    "child_process": "^1.0.2",
     "esm": "^3.2.25",
     "figlet": "^1.5.0",
     "fs": "0.0.1-security",
